fix scrollbar when width <400px

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -48,6 +48,7 @@
     .wrapper {
         margin-right: 0;
         margin-left: 23px;
+        min-width: auto;
     }
 
     .title__additional {
